[package]
name = "grid-builder"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.13.2"
bevy_egui = { version = "0.27.1", features = ["immutable_ctx"] }
bevy_mod_async = "0.6.0"
bytemuck = "1.16.0"
futures-lite = "2.3.0"
gltf = "1.4.1"
is-odd = "1.1.0"
itertools = "0.13.0"
rfd = "0.14.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
winit = "0.29.0"
